examples/test/testpolicy10937.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10937
  namespace: namespace310
spec:
  podSelector:
    matchLabels:
      key13: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value32
          key38: value15
      podSelector:
        matchLabels:
          key19: value4
          key8: value32
          key10: value34
